End of year development megaphone. Fixes #108

--- a/css/style.css
+++ b/css/style.css
@@ -57,7 +57,7 @@
 	border-color: #6BC1D3;
 }
 
-#donate {
+#donate, #donate-megaphone {
 	border-color: #FFC20E;
 }
 
